# Dante-BabelBox

./: Cargo.toml  README.md  USAGE.md  bridge.example.toml  mics.example.toml
.github/workflows/: release.yml
crates/adapter-ah/: Cargo.toml
crates/adapter-ah/src/: ahm.rs  dlive.rs  lib.rs
crates/adapter-osc/: Cargo.toml
crates/adapter-osc/src/: wing.rs  x32.rs
crates/adapter-yamaha/: Cargo.toml
crates/adapter-yamaha/src/: dm3.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  daemon.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  channel_mapping.rs  channel_scheme.rs  device.rs  legacy_plugin_bridge.rs  legacy_shim.rs  lib.rs  local_adapter.rs  plugin_registry.rs  router.rs  types.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: dante_control.rs  lib.rs
crates/mic-adapter-sennheiser/: Cargo.toml
crates/mic-adapter-sennheiser/src/: lib.rs  sennheiser.rs
crates/mic-adapter-shure/: Cargo.toml
crates/mic-adapter-shure/src/: lib.rs  shure.rs
crates/mic-cli/: Cargo.toml
crates/mic-cli/src/: config.rs  main.rs  watch.rs
crates/mic-core/: Cargo.toml
crates/mic-core/src/: adapter.rs  lib.rs  types.rs
crates/oca/: Cargo.toml
crates/oca-plugin-abi/: Cargo.toml
crates/oca-plugin-abi/src/: lib.rs
crates/oca/src/: lib.rs  object.rs  ono.rs  value.rs
crates/plugin-ah-tcp/: Cargo.toml
crates/plugin-ah-tcp/src/: lib.rs
crates/plugin-dlive-tcp/: Cargo.toml
crates/plugin-dlive-tcp/src/: lib.rs
crates/plugin-osc-wing/: Cargo.toml
crates/plugin-osc-wing/src/: lib.rs
crates/plugin-osc-x32/: Cargo.toml
crates/plugin-osc-x32/src/: lib.rs
crates/plugin-yamaha-dm3/: Cargo.toml
crates/plugin-yamaha-dm3/src/: lib.rs
crates/preamp-adapter-ah/: Cargo.toml
crates/preamp-adapter-ah/src/: ahm.rs  dlive.rs
crates/preamp-adapter-osc/: Cargo.toml
crates/preamp-adapter-osc/src/: lib.rs  wing.rs  x32.rs
crates/preamp-adapter-yamaha/: Cargo.toml
crates/preamp-adapter-yamaha/src/: dm3.rs  lib.rs
crates/preamp-cli/: Cargo.toml
crates/preamp-cli/src/: config.rs  daemon.rs  init.rs  main.rs  ports.rs
crates/preamp-web/: Cargo.toml
crates/preamp-web/src/: lib.rs
crates/preamp-web/static/: index.html
docs/: capture-guide-linux.html  capture-guide-linux.md  capture-guide-macos.html  capture-guide-macos.md  capture-guide-windows.html  capture-guide-windows.md  mic-telemetry-architecture.html  mic-telemetry-architecture.md  plugin-development-guide.md
