[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/discovery",
    "crates/preamp-adapter-osc",
    "crates/preamp-adapter-ah",
    "crates/preamp-adapter-yamaha",
    "crates/preamp-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

dante-babelbox-core = { path = "crates/core" }
dante-babelbox-discovery = { path = "crates/discovery" }
dante-babelbox-preamp-adapter-osc = { path = "crates/preamp-adapter-osc" }
dante-babelbox-preamp-adapter-ah = { path = "crates/preamp-adapter-ah" }
dante-babelbox-preamp-adapter-yamaha = { path = "crates/preamp-adapter-yamaha" }
