[package]
name = "dante-babelbox-plugin-yamaha-dm3"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dante_babelbox_plugin_yamaha_dm3"
crate-type = ["cdylib", "rlib"]

[dependencies]
dante-babelbox-core.workspace = true
dante-babelbox-oca-plugin-abi.workspace = true
dante-babelbox-preamp-adapter-yamaha.workspace = true
abi_stable.workspace = true

[dev-dependencies]
rosc = "0.10"
tokio.workspace = true
