[package]
name = "dante-babelbox-preamp-adapter-yamaha"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dante-babelbox-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rosc = "0.10"
