[package]
name = "dante-babelbox-preamp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "preamp-bridge"
path = "src/main.rs"

[dependencies]
dante-babelbox-oca.workspace = true
dante-babelbox-core.workspace = true
dante-babelbox-discovery.workspace = true
dante-babelbox-preamp-adapter-osc.workspace = true
dante-babelbox-preamp-adapter-ah.workspace = true
dante-babelbox-preamp-adapter-yamaha.workspace = true
dante-babelbox-preamp-web.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
notify = "6"

[dev-dependencies]
rosc = "0.10"
