[package]
name = "dante-babelbox-preamp-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dante-babelbox-oca.workspace = true
dante-babelbox-core.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tower.workspace = true
async-trait.workspace = true
